Add website content generated from `20035c443e66b9623bde447facde15f54026fa29`

--- a/release-notes.html
+++ b/release-notes.html
@@ -469,6 +469,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <li>
 <p>Deprecated <code>FixedDateTime</code>, <code>FastDateTime</code>, and supporting classes (<a href="https://github.com/apache/logging-log4j2/pull/3121">3121</a>)</p>
 </li>
+<li>
+<p>Use hard references to <code>Logger`s in `LoggerRegistry</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3143">3143</a>)</p>
+</li>
 </ul>
 </div>
 </div>
@@ -533,7 +536,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.4.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2975">2975</a>)</p>
 </li>
 <li>
-<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3109">3109</a>)</p>
+<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.16.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3201">3201</a>)</p>
 </li>
 <li>
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3134">3134</a>)</p>
@@ -552,6 +555,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 </li>
 <li>
 <p>Update <code>net.java.dev.jna:jna</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2956">2956</a>)</p>
+</li>
+<li>
+<p>Update <code>org.apache.activemq:activemq-broker</code> to version <code>6.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3204">3204</a>)</p>
 </li>
 <li>
 <p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3014">3014</a>)</p>
