--- a/release-notes.html
+++ b/release-notes.html
@@ -513,6 +513,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix the conversion of <code>o.a.l.Priority</code> classes to Log4j 2 levels. (<a href="https://github.com/apache/logging-log4j2/pull/3085">3085</a>)</p>
 </li>
 <li>
+<p>Fix <code>ArrayIndexOutOfBoundsException</code> in JSON Template Layout truncated exception resolver (<a href="https://github.com/apache/logging-log4j2/pull/3212">3212</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
