Add website content generated from `52dbb47c25cab2695b9e9f5faeec258bfa1016b9`

--- a/release-notes.html
+++ b/release-notes.html
@@ -513,6 +513,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Fix the conversion of <code>o.a.l.Priority</code> classes to Log4j 2 levels. (<a href="https://github.com/apache/logging-log4j2/pull/3085">3085</a>)</p>
 </li>
 <li>
+<p>Ensures synchronization between <code>j.u.l.Logger.getLevel()</code> and <code>j.u.l.Logger.setLevel()</code> methods. (<a href="https://github.com/apache/logging-log4j2/issues/3119">3119</a>)</p>
+</li>
+<li>
 <p>Fix <code>ArrayIndexOutOfBoundsException</code> in JSON Template Layout truncated exception resolver (<a href="https://github.com/apache/logging-log4j2/pull/3212">3212</a>)</p>
 </li>
 <li>
@@ -551,7 +554,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-7</code> (<a href="https://github.com/apache/logging-log4j2/pull/3129">3129</a>)</p>
 </li>
 <li>
-<p>Update <code>commons-io:commons-io</code> to version <code>2.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2984">2984</a>)</p>
+<p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3223">3223</a>)</p>
 </li>
 <li>
 <p>Update <code>io.fabric8:docker-maven-plugin</code> to version <code>0.45.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3037">3037</a>)</p>
