--- a/release-notes.html
+++ b/release-notes.html
@@ -622,6 +622,41 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 </div>
 </div>
 <div class="sect1">
+<h2 id="release-notes-2-24-2"><a class="anchor" href="#release-notes-2-24-2"></a>2.24.2</h2>
+<div class="sectionbody">
+<div class="dlist">
+<dl>
+<dt class="hdlist1">Release date</dt>
+<dd>
+<p>2024-11-18</p>
+</dd>
+</dl>
+</div>
+<div class="paragraph">
+<p>This release fixes a critical bug in Log4j API initialization code, which can cause <code>LogManager.getLogger()</code> to return <code>null</code> under certain conditions.
+See
+<a href="https://github.com/apache/logging-log4j2/issues/3143">#3143</a>
+for details.</p>
+</div>
+<div class="sect2">
+<h3 id="release-notes-2-24-2-fixed"><a class="anchor" href="#release-notes-2-24-2-fixed"></a>Fixed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Fix key removal issues in Thread Context (<a href="https://github.com/apache/logging-log4j2/pull/3048">3048</a>)</p>
+</li>
+<li>
+<p>Use hard references to <code>Logger</code>s in <code>LoggerRegistry</code>. (<a href="https://github.com/apache/logging-log4j2/issues/3143">3143</a>)</p>
+</li>
+<li>
+<p>Fix <code>ArrayIndexOutOfBoundsException</code> in JSON Template Layout truncated exception resolver (<a href="https://github.com/apache/logging-log4j2/pull/3216">3216</a>)</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="release-notes-2-24-1"><a class="anchor" href="#release-notes-2-24-1"></a>2.24.1</h2>
 <div class="sectionbody">
 <div class="dlist">
@@ -631,6 +666,23 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>2024-09-24</p>
 </dd>
 </dl>
+</div>
+<div class="admonitionblock warning">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-warning" title="Warning"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>Due to a critical bug affecting this release (see
+<a href="https://github.com/apache/logging-log4j2/issues/3143">#3143</a>)
+users are encouraged to upgrade to
+<a href="#release-notes-2-24-2">version <code>2.24.2</code></a>.</p>
+</div>
+</td>
+</tr>
+</table>
 </div>
 <div class="paragraph">
 <p>This release contains mainly bug fixes of problems encountered with the thread context map, logger registry and configuration reloading.</p>
