Add website content generated from `9299639083d7554e5c7f36284eb850de153cd65d`

--- a/release-notes.html
+++ b/release-notes.html
@@ -483,6 +483,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Switch MongoDB tests to use Docker. (<a href="https://github.com/apache/logging-log4j2/issues/2229">2229</a>)</p>
 </li>
 <li>
+<p>Fix <code>RollingFileManager</code> to reopen the log file when the rollover was unsuccessful (<a href="https://github.com/apache/logging-log4j2/issues/2592">2592</a>)</p>
+</li>
+<li>
 <p>Fix certain exception rendering issues in Pattern Layout (<a href="https://issues.apache.org/jira/browse/LOG4J2-2170">LOG4J2-2170</a>, <a href="https://issues.apache.org/jira/browse/LOG4J2-3627">LOG4J2-3627</a>, <a href="https://github.com/apache/logging-log4j2/issues/1729">1729</a>, <a href="https://github.com/apache/logging-log4j2/pull/2691">2691</a>)</p>
 </li>
 <li>
