--- a/release-notes.html
+++ b/release-notes.html
@@ -495,6 +495,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Simplify the <code>SSLContext</code> instantiation for the TLS (formerly known as SSL) configuration (<a href="https://issues.apache.org/jira/browse/LOG4J2-2988">LOG4J2-2988</a>, <a href="https://github.com/apache/logging-log4j2/pull/2767">2767</a>)</p>
 </li>
 <li>
+<p>Adding a compilation warning for Plugin Builder Attributes that do not have a public setter. (<a href="https://github.com/apache/logging-log4j2/issues/2769">2769</a>)</p>
+</li>
+<li>
 <p>Fix reloading of the configuration from an HTTP(S) source (<a href="https://github.com/apache/logging-log4j2/issues/2937">2937</a>)</p>
 </li>
 <li>
