--- a/release-notes.html
+++ b/release-notes.html
@@ -575,6 +575,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.apache.commons:commons-csv</code> to version <code>1.12.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3014">3014</a>)</p>
 </li>
 <li>
+<p>Update <code>org.apache.commons:commons-dbcp2</code> to version <code>2.13.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3271">3271</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.24</code> (<a href="https://github.com/apache/logging-log4j2/pull/3191">3191</a>)</p>
 </li>
 <li>
@@ -593,7 +596,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.apache.tomcat:tomcat-juli</code> to version <code>10.1.30</code> (<a href="https://github.com/apache/logging-log4j2/pull/2999">2999</a>)</p>
 </li>
 <li>
-<p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.21.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2940">2940</a>)</p>
+<p>Update <code>org.eclipse.platform:org.eclipse.osgi</code> to version <code>3.22.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3270">3270</a>)</p>
 </li>
 <li>
 <p>Update <code>org.hsqldb:hsqldb</code> to version <code>2.7.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/3163">3163</a>)</p>
@@ -620,7 +623,7 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Update <code>org.slf4j:slf4j-nop</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2955">2955</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.1.5</code> (<a href="https://github.com/apache/logging-log4j2/pull/3242">3242</a>)</p>
+<p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3269">3269</a>)</p>
 </li>
 </ul>
 </div>
