--- a/manual/messages.html
+++ b/manual/messages.html
@@ -895,7 +895,7 @@ It supports following formats:</p>
 <div class="ulist">
 <ul>
 <li>
-<p>JMS Appender converts to a JMS <code>javax.jms.MapMessage</code></p>
+<p>JMS Appender converts to a JMS <code>javax.jms.MapMessage</code> or <code>jakarta.jms.MapMessage</code></p>
 </li>
 <li>
 <p><a href="appenders/database.html#JdbcAppender" class="xref page">JDBC Appender</a> converts to values in an <code>SQL INSERT</code> statement</p>
