--- a/release-notes.html
+++ b/release-notes.html
@@ -483,6 +483,9 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 <p>Switch MongoDB tests to use Docker. (<a href="https://github.com/apache/logging-log4j2/issues/2229">2229</a>)</p>
 </li>
 <li>
+<p>Add a Jakarta-based JMS Appender module log4j-jakarta-jms and deprecate the Javax version. (<a href="https://github.com/apache/logging-log4j2/issues/2995">2995</a>)</p>
+</li>
+<li>
 <p>Fix <code>RollingFileManager</code> to reopen the log file when the rollover was unsuccessful (<a href="https://github.com/apache/logging-log4j2/issues/2592">2592</a>)</p>
 </li>
 <li>
@@ -618,6 +621,12 @@ See <a href="manual/pattern-layout.html#jansi" class="xref page">ANSI styling on
 </li>
 <li>
 <p>Update <code>org.openrewrite.recipe:rewrite-migrate-java</code> to version <code>2.4.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2989">2989</a>)</p>
+</li>
+<li>
+<p>Update <code>org.ops4j.pax.exam:exam-maven-plugin</code> to version <code>4.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3280">3280</a>)</p>
+</li>
+<li>
+<p>Update <code>org.ops4j.pax.exam:pax-exam</code> to version <code>4.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3277">3277</a>)</p>
 </li>
 <li>
 <p>Update <code>org.slf4j:slf4j-nop</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2955">2955</a>)</p>
