Add website content generated from `ed87354de1e42130655d1a58ff8406f9a479ec7a`

--- a/manual/architecture.html
+++ b/manual/architecture.html
@@ -867,9 +867,9 @@ However, if an ancestor of the <code>LoggerConfig</code> associated with <code>L
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>root</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">✅</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">✅</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">✅</p></td>
-<td class="tableblock halign-left valign-top"><p class="tableblock">✅</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">❌</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">❌</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">❌</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">✅</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">❌</p></td>
 </tr>
