Add website content generated from `cf2d5789442b7912c08601c6dc6b1b3078586d5a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -311,16 +311,16 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Update <code>ch.qos.logback:logback-classic</code> to version <code>1.5.14</code> (<a href="https://github.com/apache/logging-log4j2/pull/3315">3315</a>)</p>
+<p>Update <code>ch.qos.logback:logback-classic</code> to version <code>1.5.15</code> (<a href="https://github.com/apache/logging-log4j2/pull/3327">3327</a>)</p>
 </li>
 <li>
-<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.5.13</code> (<a href="https://github.com/apache/logging-log4j2/pull/3310">3310</a>)</p>
+<p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.5.15</code> (<a href="https://github.com/apache/logging-log4j2/pull/3329">3329</a>)</p>
 </li>
 <li>
 <p>Update <code>ch.qos.reload4j:reload4j</code> to version <code>1.2.26</code> (<a href="https://github.com/apache/logging-log4j2/pull/3291">3291</a>)</p>
 </li>
 <li>
-<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.16.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3230">3230</a>)</p>
+<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.17.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3286">3286</a>)</p>
 </li>
 <li>
 <p>Update <code>com.fasterxml.jackson:jackson-bom</code> to version <code>2.18.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3245">3245</a>)</p>
@@ -338,6 +338,9 @@
 <p>Update <code>net.bytebuddy:byte-buddy</code> to version <code>1.15.11</code> (<a href="https://github.com/apache/logging-log4j2/pull/3293">3293</a>)</p>
 </li>
 <li>
+<p>Update <code>net.java.dev.jna:jna</code> to version <code>5.16.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3328">3328</a>)</p>
+</li>
+<li>
 <p>Update <code>net.javacrumbs.json-unit:json-unit</code> to version <code>4.1.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3261">3261</a>)</p>
 </li>
 <li>
@@ -347,7 +350,7 @@
 <p>Update <code>org.apache.groovy:groovy-bom</code> to version <code>4.0.24</code> (<a href="https://github.com/apache/logging-log4j2/pull/3192">3192</a>)</p>
 </li>
 <li>
-<p>Update <code>org.apache.logging.log4j:log4j-api</code> to version <code>2.24.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3229">3229</a>)</p>
+<p>Update <code>org.apache.logging.log4j:log4j-api</code> to version <code>2.24.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/3292">3292</a>)</p>
 </li>
 <li>
 <p>Update <code>org.codehaus.plexus:plexus-utils</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3294">3294</a>)</p>
