Add website content generated from `094136182bee430ede74cec390b1b14026ea43c1`

--- a/release-notes.html
+++ b/release-notes.html
@@ -329,6 +329,9 @@
 <p>Update <code>com.github.luben:zstd-jni</code> to version <code>1.5.6-8</code> (<a href="https://github.com/apache/logging-log4j2/pull/3238">3238</a>)</p>
 </li>
 <li>
+<p>Update <code>com.google.guava:guava</code> to version <code>33.4.0-jre</code> (<a href="https://github.com/apache/logging-log4j2/pull/3306">3306</a>)</p>
+</li>
+<li>
 <p>Update <code>commons-io:commons-io</code> to version <code>2.18.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3222">3222</a>)</p>
 </li>
 <li>
@@ -360,6 +363,9 @@
 </li>
 <li>
 <p>Update <code>org.jmdns:jmdns</code> to version <code>3.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3193">3193</a>)</p>
+</li>
+<li>
+<p>Update <code>org.openjdk.nashorn:nashorn-core</code> to version <code>15.6</code> (<a href="https://github.com/apache/logging-log4j2/pull/3330">3330</a>)</p>
 </li>
 <li>
 <p>Update <code>org.ops4j.pax.exam:exam-maven-plugin</code> to version <code>4.14.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3276">3276</a>)</p>
