Add website content generated from `81b0aed161e982f35e0f35f8bf1ea46a485091fa`

--- a/manual/json-template-layout.html
+++ b/manual/json-template-layout.html
@@ -2296,6 +2296,23 @@ unit          = "unit" -&gt; (
 rounded       = "rounded" -&gt; boolean</code></pre>
 </div>
 </div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+<div class="paragraph">
+<p>The resolvers based on the <code>epochConfig</code> expression are garbage-free.</p>
+</div>
+<div class="paragraph">
+<p>The resolvers based on the <code>patternConfig</code> expression are low-garbage and generate temporary objects only once a minute.</p>
+</div>
+</td>
+</tr>
+</table>
+</div>
 <details>
 <summary class="title">See examples</summary>
 <div class="content">
